Styling the error message

--- a/src/components/Alert/Alert.module.css
+++ b/src/components/Alert/Alert.module.css
@@ -4,4 +4,6 @@
     text-transform: uppercase;
     font-weight: 900;
     font-size: 1.8rem;
+    padding-bottom: 1rem;
+    border-bottom: .3rem solid red;
 }
